--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-* {
+ * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inconsolata', monospace;
 }
 
 body {
-    background-color: #70c6c7;
+    background-color: #FDB44B;
 }
 
 .resume-contents {
@@ -21,13 +21,13 @@ body {
 .left-section {
     grid-column: span 2;
     height: 100%;
-    background-color: #00204A;
+    background-color: #2f0141;
 }
 
 .right-section {
     grid-column: span 5;
     height: 100%;
-    background-color: #4B6982;
+    background-color: #bc2fc9;
     border-radius: 0px 60px 0px 0px;
 }
 
